--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ div {
 p {
     padding-right: 100px;
     padding-left: 100px;
+    padding-bottom: 10px;
     margin-bottom: 20px;
     margin-right: 10px;
     margin-left: 10px;
